map on class view should be the same as the student view but need to make sure canvas covers the whole map

--- a/app/assets/stylesheets/z_class_gameplay.scss
+++ b/app/assets/stylesheets/z_class_gameplay.scss
@@ -50,5 +50,8 @@
 }
 
 canvas {
-  background-size: cover !important;
+  position: absolute;
+  left: 0;
+  top: 7rem;
+  width: 70rem;
 }
